Table "schema_migrations" {
  "version" int8 [pk, not null]
  "dirty" bool [not null]
}

Table "accounts" {
  "id" int8 [pk, not null, increment]
  "owner" varchar [not null]
  "balance" int8 [not null]
  "currency" varchar [not null]
  "created_at" timestamptz [not null, default: '2025-02-22 15:28:12.450267+00']

  Indexes {
    (owner, currency) [type: btree, name: "owner_currency_key"]
    owner [type: btree, name: "accounts_owner_idx"]
  }
}

Table "entries" {
  "id" int8 [pk, not null, increment]
  "account_id" int8 [not null]
  "amount" int8 [not null, note: 'can be postive or negative']
  "created_at" timestamptz [not null, default: '2025-02-22 15:28:12.450267+00']

  Indexes {
    account_id [type: btree, name: "entries_account_id_idx"]
  }
}

Table "transfers" {
  "id" int8 [pk, not null, increment]
  "from_account_id" int8 [not null]
  "to_account_id" int8 [not null]
  "amount" int8 [not null, note: 'must be positive']
  "created_at" timestamptz [not null, default: '2025-02-22 15:28:12.450267+00']

  Indexes {
    from_account_id [type: btree, name: "transfers_from_account_id_idx"]
    (from_account_id, to_account_id) [type: btree, name: "transfers_from_account_id_to_account_id_idx"]
    to_account_id [type: btree, name: "transfers_to_account_id_idx"]
  }
}

Table "users" {
  "username" varchar [pk, not null]
  "hashed_password" varchar [not null]
  "full_name" varchar [not null]
  "email" varchar [unique, not null]
  "password_changed_at" timestamptz [not null, default: '0001-01-01 00:00:00+00']
  "created_at" timestamptz [not null, default: '2025-02-22 15:28:12.561798+00']
}

Table "sessions" {
  "id" uuid [pk, not null]
  "username" varchar [not null]
  "refresh_token" varchar [not null]
  "user_agent" varchar [not null]
  "client_ip" varchar [not null]
  "is_blocked" bool [not null, default: false]
  "expires_at" timestamptz [not null]
  "created_at" timestamptz [not null, default: '2025-02-22 15:28:12.620021+00']
}

Ref "accounts_owner_fkey":"users"."username" < "accounts"."owner"

Ref "entries_account_id_fkey":"accounts"."id" < "entries"."account_id"

Ref "sessions_username_fkey":"users"."username" < "sessions"."username"

Ref "transfers_from_account_id_fkey":"accounts"."id" < "transfers"."from_account_id"

Ref "transfers_to_account_id_fkey":"accounts"."id" < "transfers"."to_account_id"
